src/test/ui/nll/closure-requirements/propagate-approximated-ref.stderr
note: external requirements
  --> $DIR/propagate-approximated-ref.rs:43:47
   |
LL |     establish_relationships(&cell_a, &cell_b, |_outlives1, _outlives2, x, y| {
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: defining type: supply::{closure#0} with closure substs [
               i16,
               for<'a^0, 'b^1, 'c^2, 'd^3, 'e^4, 'f^5> extern "rust-call" fn((&'a^0 std::cell::Cell<&'_#1r &'b^1 u32>, &'c^2 std::cell::Cell<&'d^3 &'_#2r u32>, &'e^4 std::cell::Cell<&'b^1 u32>, &'f^5 std::cell::Cell<&'d^3 u32>)),
               (),
           ]
   = note: late-bound region is '_#3r
   = note: late-bound region is '_#4r
   = note: number of external vids: 5
   = note: where '_#1r: '_#2r

note: no external requirements
  --> $DIR/propagate-approximated-ref.rs:42:1
   |
LL | fn supply<'a, 'b>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: defining type: supply

error: lifetime may not live long enough
  --> $DIR/propagate-approximated-ref.rs:45:9
   |
LL | fn supply<'a, 'b>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>) {
   |           --  -- lifetime `'b` defined here
   |           |
   |           lifetime `'a` defined here
...
LL |         demand_y(x, y, x.get())
   |         ^^^^^^^^^^^^^^^^^^^^^^^ argument requires that `'a` must outlive `'b`
   |
   = help: consider adding the following bound: `'a: 'b`

error: aborting due to previous error

